<resources>
    <string name="app_name">E-Kay</string>
    <string name="registration_form">Registration Form</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="sign_up">Sign Up</string>
    <string name="country">Country</string>
    <string name="blabla">Blabla</string>
    <string name="make_order">Please make an order:</string>
    <string name="order_info">Order Information</string>
    <string name="order">Order</string>
    <string-array name="country_array">
        <item>Israel</item>
        <item>Thailand</item>
        <item>Canada</item>
        <item>Russia</item>
        <item>Egypt</item>
    </string-array>

</resources>
